# MediaClassifier

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  default_cfg.yaml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
assets/: MediaClassifier.desktop  README.md  generate_icons.py  generate_icons.sh  install-linux.sh
crates/mc-cli/: Cargo.toml
crates/mc-cli/src/: config_display.rs  main.rs
crates/mc-gui/: Cargo.toml  build.rs
crates/mc-gui/lang/en/LC_MESSAGES/: mc-gui.po
crates/mc-gui/lang/zh/LC_MESSAGES/: mc-gui.po
crates/mc-gui/src/: main.rs
crates/mc-gui/ui/: main_window.slint
crates/mc-lib/: Cargo.toml  default_cfg.yaml
crates/mc-lib/src/: classifier.rs  config.rs  conflict.rs  filter.rs  lib.rs  metadata.rs  rule_matcher.rs
docs/: FONT_FIX.md  IMPLEMENTATION_STATUS.md  design.md  examples.md  gui-design.md  icon-integration.md  windows-build.md
src/: classifier.rs  config.rs  config_display.rs  conflict.rs  main.rs  media_types.rs  metadata.rs  rule_matcher.rs  utils.rs
