[package]
name = "MediaClassifier"
version = "1.2.0"
edition = "2024"

[dependencies]
walkdir = "2"
exif = { package = "kamadak-exif", version = "0.6" }
chrono = "0.4"
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml_bw = "2.5"
regex = "1.10"
dirs = "6.0"
comfy-table = "7.1"

[dev-dependencies]
tempfile = "3"
