[workspace]
resolver = "2"
members = [
    "crates/mc-lib",
    "crates/mc-cli",
    "crates/mc-gui",
]

[workspace.package]
version = "1.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Zander-1024/MediaClassifier"

[workspace.dependencies]
# Core dependencies
walkdir = "2"
exif = { package = "kamadak-exif", version = "0.6" }
chrono = "0.4"
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_bw = "2.5"
regex = "1.10"
dirs = "6.0"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
comfy-table = "7.1"

# GUI dependencies
slint = "1.8"
slint-build = "1.8"

# Dev dependencies
tempfile = "3"

# Internal crates
mc-lib = { path = "crates/mc-lib" }
