[package]
name = "mc-gui"
description = "Graphical user interface for MediaClassifier using Slint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "MediaClassifierGUI"
path = "src/main.rs"

[dependencies]
mc-lib.workspace = true
slint.workspace = true
anyhow.workspace = true
log.workspace = true
simplelog.workspace = true
walkdir.workspace = true
rfd = "0.15"

[build-dependencies]
slint-build.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
