[package]
name = "mc-lib"
description = "Core library for MediaClassifier - media file classification functionality"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
walkdir.workspace = true
exif.workspace = true
chrono.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml_bw.workspace = true
regex.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
